updating library.properties for the fork. renaming file

--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=MFRC522_NTAG424DNA
-version=1.0.1
-author=Piotr Obst
-maintainer=Piotr Obst
-sentence=Arduino RFID/NFC Library for NXP NTAG 424 DNA tags using MFRC522.
+name=libntag424
+version=0.1.0
+author=Piotr Obst / Mike Schneider
+maintainer=Mike Schneider
+sentence=Particle RFID/NFC Library for NXP NTAG 424 DNA tags using libnfc.
 paragraph=Read and write a NTAG 424 DNA card or tag. Plain, Mac and Full communication modes supported. LRP and SDM not yet supported.
 category=Communication
-url=https://github.com/obsttube/mfrc522_ntag424dna
-depends=MFRC522, CryptoAES_CBC, CRC32, AES_CMAC
+url=https://github.com/werkstattwaedi/libntag424
+#depends=MFRC522, CryptoAES_CBC, CRC32, AES_CMAC
 architectures=*
